padded header to prevent overlap on small height screens

--- a/src/styles/_/modules/layout/selectors.styl
+++ b/src/styles/_/modules/layout/selectors.styl
@@ -23,6 +23,10 @@ main
     display: flex
     flex-wrap: wrap
     align-content: flex-start
+    +min(1)
+        margin-top: header_height_b1
+    +min(2)
+        margin-top: header_height_b2
 
 footer
     color: _footer
